# AuxShaper

./: AuxShaper.jucer  CMakeLists.txt  README.md
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: AuxParam.h  AuxShaper.cpp  AuxShaper.h  AuxWaveShape.cpp  AuxWaveShape.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/: AuxBezier.h  AuxSearch.h  AuxShaper.cpp  AuxShaper.h  AuxWaveShape.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
